@@ -1,3 +1,10 @@
+2008-02-29  Emilio Meschi  <emilio.meschi@cern.ch>
+
+        * tag V01-02-01
+	* fixed defaultWebPage crash in halted
+	* Now calls explicitly beginJob in configuring
+	* call clear of ModuleWebRegistry at halting if present
+
 2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V01-02-00
